# test

commonProto/: Friend.proto  GuildProto.proto  Login.proto  Map.proto  Misc.proto  ModID.proto  Role.proto  SortList.proto  Task.proto  Team.proto  genProto.sh
config/: appconfig_copy.xml  appconfig_s2.xml  appconfig_s3.xml  appconfig_s4.xml  appconfig_s5.xml  appconfig_s6.xml
innerProto/: Bill.proto  Game.proto  Global.proto  PubGame.proto
rescfg/tbl/: AIBase.tbl  (+9 more)
sql/: billing.sql  gamedb_base_becopy.sql  osss-new-giftcordrecord.sql  osss.sql
src/: CMakeLists.txt  makectags.sh  searchWord.sh
src/FetAppCfgTool/: CMakeLists.txt  FetAppCfgTool.cpp
src/FetAppCfgToolTx/: CMakeLists.txt  FetAppCfgTool.cpp
src/GameServer/: AIConfigMgr.cpp  AIConfigMgr.h  AINpc.cpp  AINpc.h  AIState.cpp  AIState.h  Activity.cpp  Activity.h  Area.cpp  Area.h  BehaviacAI.cpp  BehaviacAI.h  Being.cpp  Being.h  CMakeLists.txt  Cell.h  Chat.cpp  Chat.h  CopyMap.cpp  CopyMap.h  DailyRecharge.cpp  DailyRecharge.h  DevilCall.cpp  DevilCall.h  DrawMgr.cpp  DrawMgr.h  DropItemObj.cpp  DropItemObj.h  DropMgr.cpp  DropMgr.h  ExpeditionMgr.cpp  ExpeditionMgr.h  GameEventNotify.h  GameProtoMsgHandleBase.h  GameServer.cpp  GameServer.h  GameTimerCB.cpp  GameTimerCB.h  GameUser.cpp  GameUser.h  (+127 more)
src/GateServer/: CMakeLists.txt  GameGateModHandle.cpp  GameGateModHandle.h  GamePacketProcessor.cpp  GameSvrClientMgr.cpp  GateServer.cpp  GateServer.h  GateTimerCB.cpp  GateTimerCB.h  GateUser.cpp  GateUser.h  GateUserConnMgr.cpp  GateUserConnMgr.h  GateUserManager.cpp  GateUserManager.h  GlobalGateModHandle.cpp  GlobalGateModHandle.h  GlobalPacketProcessor.cpp  GlobalPacketProcessor.h  GlobalSvrClientMgr.cpp  GlobalSvrClientMgr.h  PacketProcessor.cpp  PacketProcessor.h  SelectUserManager.cpp  SelectUserManager.h  UserLoginModHandle.cpp  UserLoginModHandle.h  UserRoleModHandle.cpp  UserRoleModHandle.h
src/GlobalServer/: ActivityConfigMgr.cpp  ActivityConfigMgr.h  Arena.cpp  Arena.h  Bill2GlobalHandle.cpp  Bill2GlobalHandle.h  BillPacketProcessor.cpp  BillPacketProcessor.h  BillSvrClient.cpp  BillSvrClient.h  BlackWhiteMgr.cpp  BlackWhiteMgr.h  CMakeLists.txt  CaptureTreasure.cpp  CaptureTreasure.h  CloseBetaWelfareMgr.cpp  CloseBetaWelfareMgr.h  CommonRefreshMgr.cpp  CommonRefreshMgr.h  CompensationSys.cpp  CompensationSys.h  DiscoverMgr.cpp  DiscoverMgr.h  DrawHeroScoreMgr.cpp  DrawHeroScoreMgr.h  EmeraldDreamMgr.cpp  EmeraldDreamMgr.h  Expedition.cpp  Expedition.h  FirstKillMgr.cpp  FirstKillMgr.h  FriendMgr.cpp  FriendMgr.h  FriendModHandle.cpp  FriendModHandle.h  GameModHandle.cpp  GameModHandle.h  GateModHandle.cpp  GateModHandle.h  GiftBag.cpp  (+72 more)
src/LoginServer/: CMakeLists.txt  LoginModHandle.cpp  LoginModHandle.h  LoginServer.cpp  LoginServer.h  LoginTimerCB.cpp  LoginTimerCB.h  UserManager.cpp  UserManager.h
src/NormalGameServer/: CMakeLists.txt  NormalGameServer.cpp  NormalGameServer.h
src/Proto/: Bill.pb.cc  Bill.pb.h  CMakeLists.txt  Friend.pb.cc  Friend.pb.h  Game.pb.cc  Game.pb.h  Global.pb.cc  Global.pb.h  GuildProto.pb.cc  GuildProto.pb.h  Login.pb.cc  Login.pb.h  Map.pb.cc  Map.pb.h  Misc.pb.cc  Misc.pb.h  ModID.pb.cc  ModID.pb.h  PubGame.pb.cc  PubGame.pb.h  Role.pb.cc  Role.pb.h  SortList.pb.cc  SortList.pb.h  Task.pb.cc  Task.pb.h  Team.pb.cc  Team.pb.h  scene.pb.cc  scene.pb.h
src/PubServer/: CMakeLists.txt  PubGameServer.cpp  PubGameServer.h  PubGameTimerCB.cpp  PubGameTimerCB.h
src/Test/: CMakeLists.txt  GZipTest.cpp  Test.cppbak
src/UpdateServer/: CMakeLists.txt  NoticeMgr.cpp  NoticeMgr.h  PacketProcessor.cpp  PacketProcessor.h  UidMgr.cpp  UidMgr.h  UpdateCache.cpp  UpdateCache.h  UpdateInfoMgr.cpp  UpdateInfoMgr.h  UpdateServer.cpp  UpdateServer.h  UpdateTimerCB.cpp  UpdateTimerCB.h
src/WebServer/: ActivityConfigMgr.cpp  ActivityConfigMgr.h  CMakeLists.txt  Game2WebModHandle.cpp  Game2WebModHandle.h  GamePacketProcessor.cpp  GamePacketProcessor.h  GameStaticsMgr.cpp  GameStaticsMgr.h  GameSvrClientMgr.cpp  GameSvrClientMgr.h  Global2WebModHandle.cpp  Global2WebModHandle.h  GlobalPacketProcessor.cpp  GlobalProtoMsgHandleBase.h  GlobalSvrClient.cpp  KoreaHttpInf.cpp  KoreaHttpInf.h  LimitPetMgr.cpp  LimitPetMgr.h  OperationMgr.cpp  OperationMgr.h  PacketProcessor.cpp  PacketProcessor.h  RMBShopCfg.cpp  RMBShopCfg.h  RoleInfoManager.cpp  RoleInfoManager.h  ServerListener.cpp  ServerListener.h  UserLogMgr.cpp  UserLogMgr.h  WebServer.cpp  WebServer.h  WebTimerCB.cpp  WebTimerCB.h  WebUserConnMgr.cpp  WebUserConnMgr.h  ZoneMgr.cpp  ZoneMgr.h
src/common/: AdvEventReport.cpp  AdvEventReport.h  AppConfig.cpp  AppConfig.h  ArenaConfig.cpp  ArenaConfig.h  BattlePropValue.cpp  BattlePropValue.h  CMakeLists.txt  CaptureCfg.cpp  CaptureCfg.h  CommonMicro.h  DevilCallCfg.cpp  DevilCallCfg.h  DevilCallMgr.cpp  DevilCallMgr.h  DiscoverCfg.cpp  DiscoverCfg.h  DragonNest.cpp  DragonNest.h  EmeraldDreamCfg.cpp  EmeraldDreamCfg.h  EnchantCfg.cpp  EnchantCfg.h  ExpeditionConfig.cpp  ExpeditionConfig.h  FashionShopOpenCfg.cpp  FashionShopOpenCfg.h  GameVersionCfg.cpp  GameVersionCfg.h  GemCfg.cpp  GemCfg.h  GloryfashionCfg.cpp  GloryfashionCfg.h  GuardCfg.cpp  GuardCfg.h  GuildConfig.cpp  GuildConfig.h  HeroBaseInfo.h  HeroLeagueCfg.cpp  (+105 more)
src/jsoncpp/: CMakeLists.txt
src/linuxbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/linuxbuild/FetAppCfgTool/: Makefile  cmake_install.cmake
src/linuxbuild/FetAppCfgToolTx/: Makefile  cmake_install.cmake
src/linuxbuild/GameServer/: Makefile  cmake_install.cmake
src/linuxbuild/GateServer/: Makefile  cmake_install.cmake
src/linuxbuild/GlobalServer/: Makefile  cmake_install.cmake
src/linuxbuild/LoginServer/: Makefile  cmake_install.cmake
src/linuxbuild/NormalGameServer/: Makefile  cmake_install.cmake
src/linuxbuild/Proto/: Makefile  cmake_install.cmake
src/linuxbuild/PubServer/: Makefile  cmake_install.cmake
src/linuxbuild/Test/: Makefile  cmake_install.cmake
src/linuxbuild/WebServer/: Makefile  cmake_install.cmake
src/linuxbuild/common/: Makefile  cmake_install.cmake
src/linuxbuild/jsoncpp/: Makefile  cmake_install.cmake
(+128 files in other folders)
