SET(CMAKE_INCLUDE_DIRECTORIES_BEFORE on)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
FILE(GLOB_RECURSE DIR_HEADERS "*.h")
IF(IS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ../../../bin/Test)
ELSE(IS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Test)
ENDIF(IS_DEBUG)
ADD_EXECUTABLE(Test ${DIR_SRCS} ${DIR_HEADERS})
