SET(CMAKE_INCLUDE_DIRECTORIES_BEFORE on)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
FILE(GLOB_RECURSE DIR_HEADERS "*.h")
IF(IS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ../../../bin/WebServer)
ELSE(IS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/WebServer)
ENDIF(IS_DEBUG)

ADD_EXECUTABLE(WebServer ${DIR_SRCS} ${DIR_HEADERS})
